include/constantine/curves/bls12_381.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(255)]; } bls12_381_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(381)]; } bls12_381_fp;
typedef struct { bls12_381_fp c[2]; } bls12_381_fp2;
typedef struct { bls12_381_fp2 x, y; } bls12_381_g2_aff;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_jac;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_prj;
void        ctt_big255_from_bls12_381_fr(big255* dst, const bls12_381_fr* src);
void        ctt_bls12_381_fr_from_big255(bls12_381_fr* dst, const big255* src);
ctt_bool    ctt_bls12_381_fr_unmarshalBE(bls12_381_fr* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bls12_381_fr_marshalBE(byte dst[], size_t dst_len, const bls12_381_fr* src) __attribute__((warn_unused_result));
secret_bool ctt_bls12_381_fr_is_eq(const bls12_381_fr* a, const bls12_381_fr* b);
secret_bool ctt_bls12_381_fr_is_zero(const bls12_381_fr* a);
secret_bool ctt_bls12_381_fr_is_one(const bls12_381_fr* a);
secret_bool ctt_bls12_381_fr_is_minus_one(const bls12_381_fr* a);
void        ctt_bls12_381_fr_set_zero(bls12_381_fr* a);
void        ctt_bls12_381_fr_set_one(bls12_381_fr* a);
void        ctt_bls12_381_fr_set_minus_one(bls12_381_fr* a);
void        ctt_bls12_381_fr_neg(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_neg_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_sum(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_add_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_diff(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_sub_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_double(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_double_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_prod(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_mul_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_square(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_square_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_div2(bls12_381_fr* a);
void        ctt_bls12_381_fr_inv(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_inv_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_ccopy(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_cswap(bls12_381_fr* a, bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_cset_zero(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cset_one(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cneg_in_place(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cadd_in_place(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_csub_in_place(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_big381_from_bls12_381_fp(big381* dst, const bls12_381_fp* src);
void        ctt_bls12_381_fp_from_big381(bls12_381_fp* dst, const big381* src);
ctt_bool    ctt_bls12_381_fp_unmarshalBE(bls12_381_fp* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bls12_381_fp_marshalBE(byte dst[], size_t dst_len, const bls12_381_fp* src) __attribute__((warn_unused_result));
secret_bool ctt_bls12_381_fp_is_eq(const bls12_381_fp* a, const bls12_381_fp* b);
secret_bool ctt_bls12_381_fp_is_zero(const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_is_one(const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_is_minus_one(const bls12_381_fp* a);
void        ctt_bls12_381_fp_set_zero(bls12_381_fp* a);
void        ctt_bls12_381_fp_set_one(bls12_381_fp* a);
void        ctt_bls12_381_fp_set_minus_one(bls12_381_fp* a);
void        ctt_bls12_381_fp_neg(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_neg_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_sum(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_add_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_diff(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_sub_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_double(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_double_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_prod(bls12_381_fp* r, const bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_mul_in_place(bls12_381_fp* a, const bls12_381_fp* b);
void        ctt_bls12_381_fp_square(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_square_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_div2(bls12_381_fp* a);
void        ctt_bls12_381_fp_inv(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_inv_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_ccopy(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_cswap(bls12_381_fp* a, bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_cset_zero(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cset_one(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cneg_in_place(bls12_381_fp* a, secret_bool ctl);
void        ctt_bls12_381_fp_cadd_in_place(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
void        ctt_bls12_381_fp_csub_in_place(bls12_381_fp* a, const bls12_381_fp* b, secret_bool ctl);
secret_bool ctt_bls12_381_fp_is_square(const bls12_381_fp* a);
void        ctt_bls12_381_fp_invsqrt(bls12_381_fp* r, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_invsqrt_in_place(bls12_381_fp* r, const bls12_381_fp* a);
void        ctt_bls12_381_fp_sqrt_in_place(bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_if_square_in_place(bls12_381_fp* a);
void        ctt_bls12_381_fp_sqrt_invsqrt(bls12_381_fp* sqrt, bls12_381_fp* invsqrt, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_invsqrt_if_square(bls12_381_fp* sqrt, bls12_381_fp* invsqrt, const bls12_381_fp* a);
secret_bool ctt_bls12_381_fp_sqrt_ratio_if_square(bls12_381_fp* r, const bls12_381_fp* u, const bls12_381_fp* v);
secret_bool ctt_bls12_381_fp2_is_eq(const bls12_381_fp2* a, const bls12_381_fp2* b);
secret_bool ctt_bls12_381_fp2_is_zero(const bls12_381_fp2* a);
secret_bool ctt_bls12_381_fp2_is_one(const bls12_381_fp2* a);
secret_bool ctt_bls12_381_fp2_is_minus_one(const bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_zero(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_one(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_set_minus_one(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_neg(bls12_381_fp2* a);
void        ctt_bls12_381_fp2_sum(bls12_381_fp2* r, const bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_add_in_place(bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_diff(bls12_381_fp2* r, const bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_sub_in_place(bls12_381_fp2* a, const bls12_381_fp2* b);
void        ctt_bls12_381_fp2_double(bls12_381_fp2* r, const bls12_381_fp2* a);